--- a/views/about.hbs
+++ b/views/about.hbs
@@ -51,7 +51,9 @@
                    </p>
               </div>
               <div class="w-2/5 p-12">
-                  <img id="vitruve" class="object-cover h-full mt-6" src="../public/img/vitruve.jpg" alt="">
+                  <div class="imgSize1">
+                      <!-- <img id="vitruve" class="object-cover h-full mt-6" src="../public/img/vitruve.jpg" alt=""> -->
+                  </div>
               </div>
             </section>
       </section>
@@ -69,8 +71,10 @@
           Inspired by Vinci, we at VINCI aim to transform the way we communicate and educate the world through a new medium: Virtual Reality.
           </p>
         </div>
-        <div class="w-2/5 p-12 ">
-          <img class="object-cover lg:h-full mt-6" src="../public/img/leo.png" alt="picture of davinci">
+        <div class="w-2/5 p-12">
+            <div class="imgSize2">
+                <!-- <img class="object-cover lg:h-full mt-6" src="../public/img/leo.png" alt="picture of davinci"> -->
+            </div>
         </div>
       </section>
 
@@ -176,9 +180,14 @@
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
              <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
-             <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
-             <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-             <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+               <a class="flex flex-col justify-center" href="/blogs">
+                 <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+               </a>
+               <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+               <a class="flex flex-col justify-center" href="/contact">
+                 <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+               </a>
+            </div>
              </div>
              <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
                <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
