--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -35,8 +35,9 @@
 
 				<section class="text-primary bg-secondary overflow-display">
 				  <div class="container px-5 py-24 mx-auto bg-secondary overflow-display">
-						<h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold">VINCI Blogs</h1>
-						<h4 class="tracking-widest text-left p-4 ml-242">Learn more about XR and its applications</h4>
+						<h1 class="text-left tracking-wider p-4 sm:text-4xl md:text-4xl xlg:text-4xl font-sans font-semibold -mt-10 uppercase">VINCI Blogs</h1>
+						<hr class="w-1/2 ml-4 -mt-4">
+						<h4 class="tracking-widest text-left p-4">Learn more about XR and its applications</h4>
 				    <div class="flex flex-wrap -m-4">
 							<!-- blog1 -->
 				      <div class="p-4 md:w-1/3">
