--- a/views/services.hbs
+++ b/views/services.hbs
@@ -46,7 +46,7 @@
 
       <section class="panel bg-secondary">
         <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
-          <h2 class="text-4xl text-left py-4 mx-4 font-sans">Educate Your Workforce Like Never Before</h2>
+          <h2 class="text-4xl text-left py-4 mx-4 font-medium font-sans">Educate Your Workforce Like Never Before</h2>
           <hr class=" w-3/4 py-4 font-thin mx-4">
           <section class="tracking-widest text-left mx-4">
             <p>
@@ -67,7 +67,7 @@
       <section class="panel bg-secondary">
         <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
           <section class="-ml-2 w-2/3">
-            <h2 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Authoring</h2>
+            <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans">Codex Authoring</h2>
             <hr>
             <h4 class="text-xl font-medium my-4">Fully Customize Your Simulations</h4>
             <ul>
@@ -139,68 +139,74 @@
           </section>
         </section>
 
-
-      <section class="panel bg-secondary">
-        <section class="leverage m-auto p-12 lg:px-12 lg:flex ">
-          <section class=" -ml-2 w-2/3">
-            <h1 class="text-3xl font-semibold uppercase text-center mb-10 font-sans">Why Codex</h1>
-            <h2 class="text-2xl font-semibold font-sans ">Leverage low-cost VR
-              <hr class="w-3/4 py-4 font-thin">
-            </h2>
-            <ul>
-              <li>
-                Realistic training at 10% of the cost physical simulators and enable more than 10X the number of repetitions.
-              </li>
-              <li>
-                Increase hands-on training time by hundreds of hours.
-              </li>
-              <li>
-                Utilize commercially available headsets like the Vive, Index, and Oculus Quest.
-              </li>
-            </ul>
+        <section class="panel bg-secondary">
+          <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+            <section class="-ml-2 w-2/3 ">
+              <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Leverage low-cost VR</h1>
+              <hr>
+              <h4 class="text-xl font-medium my-4"></h4>
+              <ul>
+                <li class="tracking-wider leading-loose">
+                  Realistic training at 10% of the cost physical simulators and enable more than 10X the number of repetitions.
+                </li>
+                <li class="tracking-wider leading-loose">
+                  Increase hands-on training time by hundreds of hours.
+                </li>
+                <li class="tracking-wider leading-loose">
+                  Utilize commercially available headsets like the Vive, Index, and Oculus Quest.
+                </li>
+              </ul>
+            </section>
+            <div class="imgSize4">
+              <!--IMG IS IN THE CSS BCKGRND -->
+            </div>
           </section>
-          <img class="lg:w-1/2 pl-4" src="https://images.unsplash.com/photo-1552871847-d81af14f486d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1055&q=80" alt="VR Simulation">
         </section>
-      </section>
-      <section class="panel bg-secondary">
-        <section class="leverage m-auto p-12 lg:flex">
-          <section class=" ">
-            <h2 class="text-2xl font-semibold sm:my-8 font-sans">Personalized and Relevant Content
-              <hr class="w-3/4 py-4 font-thin">
-            </h2>
-            <ul>
-              <li>
-                Utilize smart insights from codex analytics to tailor training content to individual students.
-              </li>
-              <li>
-                Keep simulations relevant with field conditions quickly with codex authoring.
-              </li>
-            </ul>
-          </section>
-          <img class="lg:w-1/2 pl-4" src="https://images.unsplash.com/photo-1592478411213-6153e4ebc07d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="VR simulation">
-        </section>
-      </section>
 
-      <section class="panel bg-secondary">
-        <section class="leverage m-auto p-12 lg:flex">
-          <section class="-ml-2 w-2/3 ">
-            <h2 class="text-2xl font-semibold sm:my-8 text-left font-sans">Scalable Collaboration
-              <hr class="w-3/4 py-4 font-thin">
-            </h2>
-            <ul>
-              <li>
-                Enable an ecosystem of content by empowering your team to innovate and create.
-              </li>
-              <li>
-                Create different training objectives in the same environment to scale your library.
-              </li>
-            </ul>
+        <section class="panel bg-secondary">
+          <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+            <section class="-ml-2 w-2/3 ">
+              <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Leverage low-cost VR</h1>
+              <hr>
+              <h4 class="text-xl font-medium my-4"></h4>
+              <ul>
+                  <li class="tracking-wider leading-loose">
+                      Utilize smart insights from codex analytics to tailor training content to individual students.
+                  </li>
+                  <li class="tracking-wider leading-loose">
+                      Keep simulations relevant with field conditions quickly with codex authoring.
+                  </li>
+              </ul>
+            </section>
+            <div class="imgSize5">
+              <!--IMG IS IN THE CSS BCKGRND -->
+            </div>
           </section>
-          <img class="lg:w-1/2 pl-4" src="https://images.unsplash.com/photo-1538388149542-5e24932d11a8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80" alt="Group of people using VR sets at same time">
         </section>
-      </section>
 
-      <section class="panel bg-secondary">
+        <section class="panel bg-secondary">
+          <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+            <section class="-ml-2 w-2/3 ">
+              <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Scalable Collaboration</h1>
+              <hr>
+              <h4 class="text-xl font-medium my-4"></h4>
+              <ul>
+                  <li class="tracking-wider leading-loose">
+                    Enable an ecosystem of content by empowering your team to innovate and create.
+                  </li>
+                  <li class="tracking-wider leading-loose">
+                    Create different training objectives in the same environment to scale your library.
+                  </li>
+              </ul>
+            </section>
+            <div class="imgSize6">
+              <!--IMG IS IN THE CSS BCKGRND -->
+            </div>
+          </section>
+        </section>
+
+
+      <!-- <section class="panel bg-secondary">
         <section class="contact">
         <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
          <section class="text-gray-700 body-font relative">
@@ -225,15 +231,19 @@
            </section>
          </section>
         </section>
-      </section>
+      </section> -->
 
       <section class="bg-secondary panel">
          <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
            <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
            <div class="flex flex-col justify-center mt-24">
-           <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
-           <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-           <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+               <a class="flex flex-col justify-center" href="/blogs">
+                 <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+               </a>
+               <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+               <a class="flex flex-col justify-center" href="/contact">
+                 <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+               </a>
            </div>
            <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
              <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
