--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -59,11 +59,13 @@
           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
             <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
             <div class="flex flex-col justify-center mt-24">
-            <a href="/blogs">
-              <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
-            <a>
-            <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-            <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg"> Reach Out To Us</button>
+               <a class="flex flex-col justify-center" href="/blogs">
+                   <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+               </a>
+               <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+               <a class="flex flex-col justify-center" href="/contact">
+                   <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+               </a>
             </div>
             <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
               <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
