--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -161,49 +161,6 @@
      </section>
 
 
-      <!--==================
-       PARTNERS SECTION
-      ==================-->
-      <!-- <section class="panel">
-
-        <section class="partnersBlock h-screen w-full mb-64">
-
-
-          <section class="text-gray-700 body-font bg-secondary">
-            <div class="container px-5 mx-auto">
-              <div class="md:flex flex-wrap -m-4 lg:mt-64">
-                <div id="card" class="card p-4 md:w-1/3  hover:bg-red-800">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/turbine.png" alt="blog">
-                    <div class="p-6">
-                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Wind Turbines</h1>
-                      <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
-                    </div>
-                  </div>
-                </div>
-                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/jet.png" alt="blog">
-                    <div class="p-6">
-                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Air Craft Maintenance</h1>
-                      <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">Explore how our partners are using this ></a>
-                    </div>
-                  </div>
-                </div>
-                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-48 md:h-48 sm:h-40 w-full object-contain object-center p-4" src="../public/img/soldier.png" alt="blog">
-                    <div class="p-6">
-                      <h1 class="tracking-widest text-2xl title-font font-medium text-primary mb-1 uppercase">Soldier Training</h1>
-                      <a class="text-xl text-primary hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-        </section>
-      </section> -->
       <section class="panel">
 
         <section class="partnersBlock h-screen w-full mb-64">
@@ -272,9 +229,13 @@
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
              <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
-             <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
-             <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-             <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+                <a class="flex flex-col justify-center" href="/blogs">
+                  <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+                </a>
+                <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+                <a class="flex flex-col justify-center" href="/contact">
+                <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+                </a>
              </div>
              <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
                <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
