finished about page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -109,7 +109,7 @@
                                <h2 class="text-left text-lg mt-2 mb-1">Eagle Wu</h2>
                               <hr class="mb-1">
                               <h5 class="text-left text-sm">Enterpreneurship @Babson College</h5>
-                              <h5 class="text-left text-sm">Winner, Money 20/20 Global Hackathon</h5>
+                              <h5 class="text-left text-sm">Winner, Money 20/20 Hackathon</h5>
                               <hr class="mt-1">
                               <p class="text-xs text-left mt-3">
 
@@ -267,14 +267,20 @@
                      ================================================================-->
                        <div class="slide">
                          <section class="biotext">
-                           <h1 class="text-left text-xl font-medium mb-1">Eagle Wu</h1>
+                           <h1 class="text-left text-xl font-medium mb-1 -mt-2">Eagle Wu</h1>
                            <hr>
                            <h5 class="text-left text-sm">Enterpreneurship @Babson College</h5>
-                           <h5 class="text-left text-sm">Winner, Money 20/20 Global Hackathon</h5>
-                           <hr>
-                           <p>
-                              UPDATE BIO
-                           </p>
+                           <h5 class="text-left text-sm">Winner, Money 20/20 Hackathon</h5>
+                           <hr class="mb-3">
+                           <div class="hidden-text-team overflow-x-auto">
+                               <p class="text-left  text-sm ">
+                                 Eagle Wu grew up in Philadelphia before going to Babson College to study
+                                 entrepreneurship. He founded VINCI while a student and is the CEO of the company. He is
+                                 focused on growing VINCI's tools and team to help solve training problems across various
+                                 industries. Eagle's passions include video games and space.
+
+                               </p>
+                         </div>
                          </section>
                            <img src="../public/img/eagle.png" class="image-slide" alt="Eagle Wu" />
                        </div>
@@ -283,12 +289,22 @@
                      ================================================================-->
                        <div class="slide">
                          <section class="biotext">
-                           <h1 class="text-left text-xl font-medium mb-1">Tim Clancy</h1>
+                           <h1 class="text-left text-xl font-medium mb-1 -mt-2">Tim Clancy</h1>
                            <hr>
                            <h5 class="text-left text-sm">Computer Science, MS @UPenn</h5>
                            <h5 class="text-left text-sm">Lead Developer, Salad Blockchain</h5>
-                           <hr>
-                           <p>UPDATE BIO</p>
+                           <hr class="mb-3">
+                           <div class="hidden-text-team overflow-x-auto">
+                               <p class="text-left  text-sm ">
+                                 Tim Clancy is a native of southern Massachusetts currently living in Ithaca, New York.
+                                 In 2018 he received his BSE and MSE in computer science from the University of Pennsylvania
+                                 after accelerating a five year submatriculation program to completion in four years. He is the
+                                 co-founder and current CTO of VINCI, where he oversees engineering efforts directed towards
+                                 improving modern virtual reality training solutions. Tim is also passionate about blockchain
+                                 technology, gaming in general, and gardening
+
+                               </p>
+                         </div>
                          </section>
                            <img src="../public/img/tim.png" class="image-slide" alt="Tim Clancy" />
                        </div>
@@ -297,12 +313,20 @@
                      ================================================================-->
                        <div class="slide">
                            <section class="biotext">
-                             <h1 class="text-left text-xl font-medium mb-1">Liam Clancy</h1>
+                             <h1 class="text-left text-xl font-medium mb-1 -mt-2">Liam Clancy</h1>
                              <hr>
                              <h5 class="text-left text-sm">Computer Science @Boston University</h5>
-                             <h5 class="text-left text-sm mb-4"></h5>
-                             <hr>
-                             <p>UPDATE BIO</p>
+                             <h5 class="text-left text-sm"></h5>
+                             <hr class="bio-hr mb-3">
+                             <div class="hidden-text-team overflow-x-auto">
+                                 <p class="text-left  text-sm ">
+                                   Liam Clancy was born in Providence, Rhode Island, and received his education at Boston
+                                   University for Computer Science. He is a developer for VINCI, where his primary focus is on
+                                   the CODEX platform and applications interfacing with the simulation, such as the Instructor
+                                   Monitoring Station. In his spare time, Liam works on a farm, enjoys spending time with his
+                                   friends, and hangs out with his bird.
+                                 </p>
+                           </div>
                            </section>
                              <img src="../public/img/liam.png" class="image-slide" alt="Tim Clancy" />
                        </div>
@@ -312,12 +336,19 @@
                      ================================================================-->
                        <div class="slide">
                          <section class="biotext">
-                           <h1 class="text-left text-xl font-medium mb-1">Matthew Oh</h1>
+                           <h1 class="text-left text-xl font-medium mb-1 -mt-2">Matthew Oh</h1>
                            <hr>
                            <h5 class="text-left text-sm">Economics @Tuft University</h5>
-                           <h5 class="text-left text-sm mb-4"></h5>
-                           <hr>
-                           <p>UPDATE BIO</p>
+                           <h5 class="text-left text-sm"></h5>
+                           <hr class="mb-3">
+                           <div class="hidden-text-team overflow-x-auto">
+                               <p class="text-left  text-sm ">
+                                 Matthew Oh is the Business Development Analyst at Vinci. Originally from the Bay
+                                 Area, he is a student at Tufts University, majoring in Economics and minoring in Finance &
+                                 English. At Vinci, Matthew is responsible for research and outreach — primarily in the private
+                                 sector. In his free time, Matthew enjoys watching sports and cooking.
+                               </p>
+                         </div>
                          </section>
                            <img src="../public/img/matt.png" class="image-slide" alt="Tim Clancy" />
                        </div>
@@ -326,12 +357,22 @@
                      ================================================================-->
                        <div class="slide">
                          <section class="biotext">
-                           <h1 class="text-left text-xl font-medium mb-1">Sloan Poelman</h1>
+                           <h1 class="text-left text-xl font-medium mb-1 -mt-2">Sloan Poelman</h1>
                            <hr>
-                           <h5 class="text-left text-sm">Blank @Blank University</h5>
-                           <h5 class="text-left text-sm">UPDATE</h5>
-                           <hr>
-                           <p>UPDATE BIO</p>
+                           <h5 class="text-left text-sm">Graduate @BYU</h5>
+                           <h5 class="text-left text-sm">2x BYU Animation Award Winner</h5>
+                           <hr class="mb-3">
+                           <div class="hidden-text-team overflow-x-auto">
+                               <p class="text-left  text-sm ">
+                                Sloan Poelman is a passionate multimedia artist strong in stylized and realistic
+                                rendering styles. Originally from Orem, Utah, he worked with a team at Brigham Young
+                                University to compete on a national level with two video games, and received BYU Design
+                                Department Talent awards for two consecutive years for innovative work in animation.
+                                Currently, he is a 3D modeler at Vinci VR, where he ensures that the 3D models created are
+                                accurate to their real world counterparts. In his free time, Sloan enjoys listening to audio books,
+                                exercising, and spending time with his family.
+                               </p>
+                         </div>
                          </section>
                            <img src="../public/img/img1.png" class="image-slide" alt="Tim Clancy" />
                        </div>
@@ -340,12 +381,20 @@
                      ================================================================-->
                        <div class="slide">
                          <section class="biotext">
-                           <h1 class="text-left text-xl font-medium mb-1">Laura Prados-Bacó</h1>
+                           <h1 class="text-left text-xl font-medium mb-1 -mt-2">Laura Prados-Bacó</h1>
                            <hr>
-                           <h5 class="text-left text-sm">Blank @Babson College</h5>
-                           <h5 class="text-left text-sm mb-4"></h5>
-                           <hr>
-                           <p>UPDATE BIO</p>
+                           <h5 class="text-left text-sm  mb-1">Studying @Babson College</h5>
+                           <h5 class="text-left text-sm  mb-1"></h5>
+                           <hr class="mb-3">
+                           <div class="hidden-text-team overflow-x-auto">
+                               <p class="text-left  text-sm ">
+                                 Laura Prados-Bacó was born and raised in San Juan, Puerto Rico. At 18 years old, she left
+                                 Puerto Rico to pursue an education at Babson College. She currently holds the Marketing
+                                 position in the Business Development division at Vinci, where she aids with the creation of
+                                 marketing materials, brand management, and PR-related tasks. When not working, Laura likes
+                                 to read, skateboard, and spend time with her friends.
+                               </p>
+                         </div>
                          </section>
                            <img src="../public/img/laura.png" class="image-slide" alt="Tim Clancy" />
                        </div>
