--- a/public/css/bios.css
+++ b/public/css/bios.css
@@ -162,9 +162,17 @@ opacity: 0.8;
 padding: 2rem;
 width: 55%;
 height: 300px;
-max-height: 350px;
+max-height: 400px;
 position: absolute;
 z-index: 1;
 margin-top: 20%;
 margin-left: 71%;
+}
+
+.hidden-text-team{
+  border: 1px transparent;
+  width: 100%;
+  height: 165px;
+  padding-right: 1px;
+  scrollbar-width: thin;
 }
