Add YT embed for spotlight section

--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -213,7 +213,11 @@
         <section class="panel spotlight h-screen w-full">
           <h1 class="text-center text-3xl mt-32 uppercase font-sans font-black">Spotlight</h1>
           <section class="spot-container flex justify-center p-12">
-            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FSheppardAirForceBase%2Fvideos%2F558267695076414%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            <!-- <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FSheppardAirForceBase%2Fvideos%2F558267695076414%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
+
+            <iframe width="860" height="615" src="https://www.youtube-nocookie.com/embed/NloJsABn8qM?vq=hd720" frameborder="0" allow="encrypted-media; picture-in-picture" allowfullscreen="true" controls="0"></iframe>
+
+            <!-- <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NloJsABn8qM?autoplay=1&iv_load_policy=3&loop=1&modestbranding=1&playlist=NloJsABn8qM" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen"></iframe> -->
           </section>
         </section>
       </section>
