--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -42,7 +42,7 @@
           <video class="bg-video object-cover overflow-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index:-1;">
               <source src="../public/video/background2.mp4" type="video/mp4">
           </video>
-          <section class="hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40">
+          <section class="hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg:">
             <h3 class="font-serif sm:text-xl md:text-xl xlg:text-2xl"> PREPARE FOR THE REAL WORLD
               <hr class="mt-4 w-1/3 mx-auto">
             </h3>
