--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,11 @@
 @font-face {
   font-family: 'Montserrat';
   font-weight: 400;
-  src: url('../public/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
+  src: url('../fonts/Montserrat/Montserrat-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Spectral';
   font-weight: 400;
-  src: url('../public/fonts/Spectral/Spectral-Regular.ttf') format('truetype');
+  src: url('../fonts/Spectral/Spectral-Regular.ttf');
 }
