Make fonts consistent across site and match brand defs

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,6 +8,11 @@
     <title></title>
   </head>
   <body class="font-serif">
+    <style media="screen">
+      h1, h2, h3, h4, h5, h6 {
+        font-family: "Montserrat", sans-serif !important;
+      }
+    </style>
     <section id = "container" class="main-wrapper overflow-x-hidden">
      <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary panel background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
           <header class="text-gray-700 body-font ">
