--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -16,6 +16,11 @@
         <!--==================
          NAV SECTION
         ==================-->
+        <style media="screen">
+          h1, h2, h3, h4, h5, h6 {
+            font-family: "Montserrat", sans-serif !important;
+          }
+        </style>
 
         <header class="text-gray-700 body-font ">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
