--- a/views/case_USAF.hbs
+++ b/views/case_USAF.hbs
@@ -18,7 +18,6 @@
 		<link rel="stylesheet" type="text/css" href="../public/css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="../public/css/set1.css" />
 	  <link rel="stylesheet" type="text/css" href="../public/css/blog.css"/>
-		<link rel="stylesheet" href="../public/css/output-styles.css">
 		<link rel="stylesheet" href="../public/css/modalcss.css">
 		<link rel="stylesheet" href="../public/js/bootstrap.js">
 
@@ -27,12 +26,9 @@
 		<script src="../public/js/FileSaver.js"></script>
 
 
-    <style type="text/css">
-        .navLink {
-            color: #000000 !important;
-        }
-    </style>
     <script src="/js/download.js"></script>
+		<link rel="stylesheet" href="../public/css/output-styles.css">
+
 
 </head>
 
@@ -41,6 +37,16 @@
 	<<!--==================
 	 NAV SECTION
 	==================-->
+
+	<style media="screen">
+		h1, h2, h3, h4, h5, h6 {
+			font-family: "Montserrat", sans-serif !important;
+		}
+
+		body, p, ul, li {
+			font-family: "Spectral", serif !important;
+		}
+	</style>
 
 	<header class="text-gray-700 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
