--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -7,6 +7,12 @@
     <title>CONTACT</title>
   </head>
   <body class="font-serif">
+
+    <style media="screen">
+      h1, h2, h3, h4, h5, h6 {
+        font-family: "Montserrat", sans-serif !important;
+      }
+    </style>
     <section id = "container">
         <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
           <header class="text-gray-700 body-font ">
