--- a/views/services.hbs
+++ b/views/services.hbs
@@ -13,6 +13,11 @@
     <section id="container" class="main-wrapper overflow-x-hidden">
       <section class="panel">
         <section class="hero-section h-screen w-full">
+          <style media="screen">
+            h1, h2, h3, h4, h5, h6 {
+              font-family: "Montserrat", sans-serif !important;
+            }
+          </style>
 
           <!--==================
            NAV SECTION
@@ -70,7 +75,7 @@
             <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans">Codex Authoring</h2>
             <hr>
             <h4 class="text-xl font-medium my-4">Fully Customize Your Simulations</h4>
-            <ul>
+            <ul class="text-md">
               <li class="tracking-wider leading-loose">
                 Fully customize simulations, such as interactions, instructional content, and training manuals as easily as Powerpoint.
               </li>
