--- a/views/blog_saving.hbs
+++ b/views/blog_saving.hbs
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" type="text/css" href="../public/css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="../public/css/set1.css" />
 	  <link rel="stylesheet" type="text/css" href="../public/css/blog.css"/>
-		<link rel="stylesheet" href="../public/css/output-styles.css">
+
 		<link rel="stylesheet" href="../public/css/modalcss.css">
 		<link rel="stylesheet" href="../public/js/bootstrap.js">
 
@@ -26,13 +26,8 @@
 		<script src="../public/js/FileSaver.js"></script>
 
 
-    <style type="text/css">
-        .navLink {
-            color: #000000 !important;
-        }
-    </style>
-
     <script src="/js/download.js"></script>
+		<link rel="stylesheet" href="../public/css/output-styles.css">
 </head>
 
 <body id = "newindex">
@@ -40,6 +35,16 @@
 	<!--==================
 	 NAV SECTION
 	==================-->
+
+	<style media="screen">
+		h1, h2, h3, h4, h5, h6 {
+			font-family: "Montserrat", sans-serif !important;
+		}
+
+		body, p, ul, li {
+			font-family: "Spectral", serif !important;
+		}
+	</style>
 
 	<header class="text-gray-700 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
@@ -131,13 +136,13 @@
 
                             <div class="bullet_list">
                                 <ul class="list">
-                                    <li><span class="boldSansation">Lack of time -</span><span class="italic">Training programs may be too time-consuming for employees to complete and stay on top of their work.</span></li>
+                                    <li><span class="">Lack of time -</span><span class="italic">Training programs may be too time-consuming for employees to complete and stay on top of their work.</span></li>
 
-                                    <li><span class="boldSansation">Incomplete training materials -</span><span class="italic">Companies may not have a full understanding of what objectives need to be taught to employees.</span></li>
+                                    <li><span class="">Incomplete training materials -</span><span class="italic">Companies may not have a full understanding of what objectives need to be taught to employees.</span></li>
 
-                                    <li><span class="boldSansation">Undefined or poorly defined expectations—</span><span class="italic">Companies may know what they want to teach but they may not have a clear understanding of what constitutes an employee successfully learning the material.</span></li>
+                                    <li><span class="">Undefined or poorly defined expectations—</span><span class="italic">Companies may know what they want to teach but they may not have a clear understanding of what constitutes an employee successfully learning the material.</span></li>
 
-                                    <li><span class="boldSansation">Boring materials—</span><span class="italic">The materials don’t encourage participation or are overly generic.</span></li>
+                                    <li><span class="">Boring materials—</span><span class="italic">The materials don’t encourage participation or are overly generic.</span></li>
                                 </ul>
                             </div>
 
