--- a/views/blog_xrtypes.hbs
+++ b/views/blog_xrtypes.hbs
@@ -9,13 +9,14 @@
 	<link rel="stylesheet" type="text/css" href="../public/css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="../public/css/set1.css" />
   <link rel="stylesheet" type="text/css" href="../public/css/blog.css"/>
-	<link rel="stylesheet" href="../public/css/output-styles.css">
 	<link rel="stylesheet" href="../public/css/modalcss.css">
 	<link rel="stylesheet" href="../public/js/bootstrap.js">
 
 
 	<script src="../public/js/download.js"></script>
 	<script src="../public/js/FileSaver.js"></script>
+	<link rel="stylesheet" href="../public/css/output-styles.css">
+
 </head>
 
 <body id = "newindex">
@@ -23,6 +24,15 @@
 	<!--==================
 	 NAV SECTION
 	==================-->
+	<style media="screen">
+		h1, h2, h3, h4, h5, h6 {
+			font-family: "Montserrat", sans-serif !important;
+		}
+
+		body, p, ul, li {
+			font-family: "Spectral", serif !important;
+		}
+	</style>
 
 	<header class="text-gray-700 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
