--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -16,6 +16,12 @@
 					 NAV SECTION
 					==================-->
 
+					<style media="screen">
+			      h1, h2, h3, h4, h5, h6 {
+			        font-family: "Montserrat", sans-serif !important;
+			      }
+			    </style>
+
 					<header class="">
 							<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 								<a href="/" class="flex items-center mb-4 md:mb-0  z-10">
