--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -7,6 +7,11 @@
     <title>PARTNERS</title>
   </head>
   <body class="font-serif">
+    <style media="screen">
+      h1, h2, h3, h4, h5, h6 {
+        font-family: "Montserrat", sans-serif !important;
+      }
+    </style>
     <section id = "container" class="background">
       <section id="cover" class="hero-section text-primary panel background cover overflow-hidden">
         <header class="text-gray-700 body-font ">
@@ -87,7 +92,7 @@
        <!-- - - - - - - - - Soldier Training ---------------->
         <section class="mb-4 panel background third">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
+            <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
@@ -113,7 +118,7 @@
       <!-- - - - - - - - - SafetyDNA VR ---------------->
         <section class="mb-4 panel background fourth">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">SafetyDNA VR</h1>
+            <h1 class="text-primary font-semibold text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">SafetyDNA VR</h1>
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
