--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -20,7 +20,7 @@
           <header class="text-gray-700 body-font">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
                 <a href="/" class="flex items-center mb-4 md:mb-0  z-10">
-                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                  <img class="w-1/4 -mt-2" src="../public/img/vinci-logo.png" alt="">
                 </a>
                 <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
                   <a href="/about" class="mr-5 hover:text-gray-900">About</a>
@@ -43,14 +43,14 @@
               <source src="../public/video/background2.mp4" type="video/mp4">
           </video>
           <section class="hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg:">
-            <h3 class="font-serif sm:text-xl md:text-xl xlg:text-2xl"> PREPARE FOR THE REAL WORLD
-              <hr class="mt-4 w-1/3 mx-auto">
+            <h3 class="font-sans mt-10 text-lg md:text-xl lg:text-2xl xlg:text-2xl"> PREPARE FOR THE REAL WORLD
+              <hr class="mt-4 w-1/2 md:1/3 lg:1/4 xl:1/3 mx-auto">
             </h3>
             <br>
-             <h1 class="font-sans font-black -mb-20 -mt-6 sm:text-4xl md:text-4xl"> WITH A WORLD OF YOUR OWN
+             <h1 class="font-sans font-black -mb-20 -mt-6 text-2xl md:text-4xl"> WITH A WORLD OF YOUR OWN
               <hr class=" w-1/3 mx-auto mb-10">
             </h1>
-           <h3 class="font-serif pt-12 sm:my-8 sm:text-xl md:text-xl xlg:text-2xl ">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
+           <h3 class="font-sans my-8 pt-12   text-lg md:text-xl xlg:text-2xl  ">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
            <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-sm" href="/services">Learn about our services</a>
     ​
@@ -217,7 +217,7 @@
 
             <iframe width="860" height="615" src="https://www.youtube-nocookie.com/embed/NloJsABn8qM?vq=hd720" frameborder="0" allow="encrypted-media; picture-in-picture" allowfullscreen="true" controls="0"></iframe>
 
-            
+
           </section>
         </section>
       </section>
