--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -17,7 +17,7 @@ aside,
 details,
 figcaption,
 figure,
-footer,
+ ,
 header,
 hgroup,
 main,
@@ -1486,7 +1486,7 @@ blockquote ul:last-child,
 blockquote ol:last-child {
   margin-bottom: 0;
 }
-blockquote footer,
+blockquote  ,
 blockquote small,
 blockquote .small {
   display: block;
@@ -1494,7 +1494,7 @@ blockquote .small {
   line-height: 1.42857143;
   color: #777;
 }
-blockquote footer:before,
+blockquote  :before,
 blockquote small:before,
 blockquote .small:before {
   content: '\2014 \00A0';
@@ -1507,16 +1507,16 @@ blockquote.pull-right {
   border-right: 5px solid #eee;
   border-left: 0;
 }
-.blockquote-reverse footer:before,
-blockquote.pull-right footer:before,
+.blockquote-reverse  :before,
+blockquote.pull-right  :before,
 .blockquote-reverse small:before,
 blockquote.pull-right small:before,
 .blockquote-reverse .small:before,
 blockquote.pull-right .small:before {
   content: '';
 }
-.blockquote-reverse footer:after,
-blockquote.pull-right footer:after,
+.blockquote-reverse  :after,
+blockquote.pull-right  :after,
 .blockquote-reverse small:after,
 blockquote.pull-right small:after,
 .blockquote-reverse .small:after,
@@ -5526,7 +5526,7 @@ button.list-group-item-danger.active:focus {
 .panel-title > .small > a {
   color: inherit;
 }
-.panel-footer {
+.panel-  {
   padding: 10px 15px;
   background-color: #f5f5f5;
   border-top: 1px solid #ddd;
@@ -5561,7 +5561,7 @@ button.list-group-item-danger.active:focus {
 .panel-heading + .list-group .list-group-item:first-child {
   border-top-width: 0;
 }
-.list-group + .panel-footer {
+.list-group + .panel-  {
   border-top-width: 0;
 }
 .panel > .table,
@@ -5722,10 +5722,10 @@ button.list-group-item-danger.active:focus {
 .panel-group .panel-heading + .panel-collapse > .list-group {
   border-top: 1px solid #ddd;
 }
-.panel-group .panel-footer {
+.panel-group .panel-  {
   border-top: 0;
 }
-.panel-group .panel-footer + .panel-collapse .panel-body {
+.panel-group .panel-  + .panel-collapse .panel-body {
   border-bottom: 1px solid #ddd;
 }
 .panel-default {
@@ -5743,7 +5743,7 @@ button.list-group-item-danger.active:focus {
   color: #f5f5f5;
   background-color: #333;
 }
-.panel-default > .panel-footer + .panel-collapse > .panel-body {
+.panel-default > .panel-  + .panel-collapse > .panel-body {
   border-bottom-color: #ddd;
 }
 .panel-primary {
@@ -5761,7 +5761,7 @@ button.list-group-item-danger.active:focus {
   color: #337ab7;
   background-color: #fff;
 }
-.panel-primary > .panel-footer + .panel-collapse > .panel-body {
+.panel-primary > .panel-  + .panel-collapse > .panel-body {
   border-bottom-color: #337ab7;
 }
 .panel-success {
@@ -5779,7 +5779,7 @@ button.list-group-item-danger.active:focus {
   color: #dff0d8;
   background-color: #3c763d;
 }
-.panel-success > .panel-footer + .panel-collapse > .panel-body {
+.panel-success > .panel-  + .panel-collapse > .panel-body {
   border-bottom-color: #d6e9c6;
 }
 .panel-info {
@@ -5797,7 +5797,7 @@ button.list-group-item-danger.active:focus {
   color: #d9edf7;
   background-color: #31708f;
 }
-.panel-info > .panel-footer + .panel-collapse > .panel-body {
+.panel-info > .panel-  + .panel-collapse > .panel-body {
   border-bottom-color: #bce8f1;
 }
 .panel-warning {
@@ -5815,7 +5815,7 @@ button.list-group-item-danger.active:focus {
   color: #fcf8e3;
   background-color: #8a6d3b;
 }
-.panel-warning > .panel-footer + .panel-collapse > .panel-body {
+.panel-warning > .panel-  + .panel-collapse > .panel-body {
   border-bottom-color: #faebcc;
 }
 .panel-danger {
@@ -5833,7 +5833,7 @@ button.list-group-item-danger.active:focus {
   color: #f2dede;
   background-color: #a94442;
 }
-.panel-danger > .panel-footer + .panel-collapse > .panel-body {
+.panel-danger > .panel-  + .panel-collapse > .panel-body {
   border-bottom-color: #ebccd1;
 }
 .embed-responsive {
@@ -5993,19 +5993,19 @@ button.close {
   position: relative;
   padding: 15px;
 }
-.modal-footer {
+.modal-  {
   padding: 15px;
   text-align: right;
   border-top: 1px solid #e5e5e5;
 }
-.modal-footer .btn + .btn {
+.modal-  .btn + .btn {
   margin-bottom: 0;
   margin-left: 5px;
 }
-.modal-footer .btn-group .btn + .btn {
+.modal-  .btn-group .btn + .btn {
   margin-left: -1px;
 }
-.modal-footer .btn-block + .btn-block {
+.modal-  .btn-block + .btn-block {
   margin-left: 0;
 }
 .modal-scrollbar-measure {
@@ -6532,8 +6532,8 @@ button.close {
 .pager:after,
 .panel-body:before,
 .panel-body:after,
-.modal-footer:before,
-.modal-footer:after {
+.modal- :before,
+.modal- :after {
   display: table;
   content: " ";
 }
@@ -6551,7 +6551,7 @@ button.close {
 .navbar-collapse:after,
 .pager:after,
 .panel-body:after,
-.modal-footer:after {
+.modal- :after {
   clear: both;
 }
 .center-block {
