--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" href="../public/css/output-styles.css">
 		<link rel="stylesheet" href="../public/css/blogs.css">
 		<link rel="stylesheet" href="../public/css/panels.css">
+		<link rel="stylesheet" href="../public/css/mobile.css">
 	  <!-- <script src="/js/download.js"></script> -->
 		<meta charset="utf-8">
 		<title>VINCI VR</title>
@@ -11,6 +12,7 @@
 
 	<body class="bg-secondary color-primary">
 		<section id="container">
+			<div class="main-wrapper">
 				<section class="panel">
 					<!--==================
 					 NAV SECTION
@@ -202,22 +204,26 @@
            </footer>
         </section>
 			</section>
-		</section>
-	<!--
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-100054313-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
-	 -->
+			</div>  <!-- end of desktop main container -->
 
 
+     <!-- beginning of main mobile view container -->
+     <section class="mobile-main">
+       <section class="panel first">
+         <h1>Hi mobile view!</h1>
+       </section>
+       <section class="panel second">
+         <h1>Panel 2</h1>
+       </section>
 
-		<!-- SCRIPTS -->
+		 </section>   <!-- end of mobile container -->
+
+    </section> <!-- end of panel container -->
+
+<!-- ===============
+    SCRIPTS
+=================== -->
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
 		<script src ="../public/js/blogs.js"></script>
