--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -7,152 +7,168 @@
     <link rel="stylesheet" href="../public/css/output-styles.css">
     <link rel="stylesheet" href="../public/css/panels.css">
     <link rel="stylesheet" href="../public/css/careers.css">
+    <link rel="stylesheet" href="../public/css/mobile.css">
     <title>Vinci VR</title>
   </head>
   <body class="text-primary bg-secondary font-serif">
     <section id="container">
-      <section class="panel hero-img text-2xl">
+      <div class="main-wrapper">
+        <section class="panel hero-img text-2xl">
+
+          <!--==================
+           NAV SECTION
+          ==================-->
+          <style media="screen">
+            h1, h2, h3, h4, h5, h6 {
+              font-family: "Montserrat", sans-serif !important;
+            }
+          </style>
+
+          <header class="text-gray-700 body-font ">
+              <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+                <a href="/" class="flex items-center mb-4 md:mb-0">
+                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                </a>
+                <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                  <a href="/about" class="mr-5 hover:text-gray-900">About</a>
+                  <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
+                  <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
+                  <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
+                  <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
+                  <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
+                </nav>
+              </div>
+          </header>
+          <hr class="-mt-4">
+
+
+          <!--===================
+           HERO SECTION CONTENTS
+          =====================-->
+          <!-- <section class="contents mt-24 w-full p-4 absolute">
+         -->
+         <section class="">
+              <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.2); z-index:0;"></div> -->
+              <h1 class="text-4xl uppercase text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl">Careers
+              </h1>
+              <hr class="coverHr w-1/4 center mx-auto">
+              <p class="tracking-widest text-center pt-1 font-serif">Join the VINCI team</p>
+               <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
+              <!-- <img src="" alt=""> -->
+          </section>
+        </section>
 
         <!--==================
-         NAV SECTION
+         CAREERS INFO SECTION
         ==================-->
-        <style media="screen">
-          h1, h2, h3, h4, h5, h6 {
-            font-family: "Montserrat", sans-serif !important;
-          }
-        </style>
+        <section class="panel bg-secondary h-full">
+          <section class="bg-secondary text-2xl sm:p-12 overflow-auto">
+              <h1 class="text-4xl font-bold p-4 font-sans">Join Our Team
+                <hr class="mt-4 w-1/6 py-2 mb-20">
+              </h1>
 
-        <header class="text-gray-700 body-font ">
-            <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-              <a href="/" class="flex items-center mb-4 md:mb-0">
-                <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
-              </a>
-              <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
-                <a href="/about" class="mr-5 hover:text-gray-900">About</a>
-                <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
-                <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
-                <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
-                <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
-                <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
-              </nav>
-            </div>
-        </header>
-        <hr class="-mt-4">
+              <!-- <hr class="w-3/4" style="border-color:#7C7C7C;"> -->
+              <section class="bg-secondary grid grid-cols-3 border">
+                <h3 class="w-1/3 col-span-1">Position</h3>
+                <h3 class="w-1/3 col-span-1">Type</h3>
+                <h3 class="w-1/3 col-span-1">Location</h3>
+                <details class="col-span-3 bg-secondary" closed>
+                  <summary>Business Development - Internship - Boston, MA</summary>
+                  <h4>Business Development Internship</h4>
+                  <p style="color:#7C7C7C;">
+                    VINCI is looking to expand its presence and increase deal flow with its target industries.
+                  </p>
+                  <p style="color:#7C7C7C;">
+                    A Business Development Analyst (BDA) will assist the Business Development (BD) team with researching key market and geopolitical conditions. Collected information will be used to grow VINCI's customer base while ensuring operations are adjusted accordingly.
+                  </p>
+                  <p style="color:#7C7C7C;">
+                    In addition, the BDA will assist VINCI's team with writing responses to RFPs, in addition to budgeting, marketing, and other Business Development Activities.
+                  </p>
 
-
-        <!--===================
-         HERO SECTION CONTENTS
-        =====================-->
-        <!-- <section class="contents mt-24 w-full p-4 absolute">
-       -->
-       <section class="">
-            <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.2); z-index:0;"></div> -->
-            <h1 class="text-4xl uppercase text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl">Careers
-            </h1>
-            <hr class="coverHr w-1/4 center mx-auto">
-            <p class="tracking-widest text-center pt-1 font-serif">Join the VINCI team</p>
-             <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
-            <!-- <img src="" alt=""> -->
+                  <h4>Breakdown of responsibilities</h4>
+                  <ul class="resp">
+                    <li style="color:#7C7C7C;">> Analyze and create reports on current market conditions and players within VINCI's industry segments</li>
+                    <br>
+                    <li style="color:#7C7C7C;"> > Write Responses to RFPs for target industries</li>
+                    <br>
+                    <li style="color:#7C7C7C;">> Update and manage the company's internal CRM tools (or create/use new CRM tools) to grow its base of leads</li>
+                  </ul>
+                </details>
+                <details class="col-span-3"  closed>
+                  <summary>N/A - Part Time - Boston, MA</summary>
+                </details>
+                <details class="col-span-3"  closed>
+                  <summary>N/A - Part Time - Boston, MA</summary>
+                </details>
+                <details class="col-span-3"  closed>
+                  <summary>N/A - Part Time - Boston, MA</summary>
+                </details>
+                <details class="col-span-3"  closed>
+                  <summary>N/A - Part Time - Boston, MA</summary>
+                </details>
+                <details class="col-span-3"  closed>
+                  <summary>N/A - Part Time - Boston, MA</summary>
+                </details>
+              </section>
+          </section>
         </section>
-      </section>
-
-      <!--==================
-       CAREERS INFO SECTION
-      ==================-->
-      <section class="panel bg-secondary h-full">
-        <section class="bg-secondary text-2xl sm:p-12 overflow-auto">
-            <h1 class="text-4xl font-bold p-4 font-sans">Join Our Team
-              <hr class="mt-4 w-1/6 py-2 mb-20">
-            </h1>
-
-            <!-- <hr class="w-3/4" style="border-color:#7C7C7C;"> -->
-            <section class="bg-secondary grid grid-cols-3 border">
-              <h3 class="w-1/3 col-span-1">Position</h3>
-              <h3 class="w-1/3 col-span-1">Type</h3>
-              <h3 class="w-1/3 col-span-1">Location</h3>
-              <details class="col-span-3 bg-secondary" closed>
-                <summary>Business Development - Internship - Boston, MA</summary>
-                <h4>Business Development Internship</h4>
-                <p style="color:#7C7C7C;">
-                  VINCI is looking to expand its presence and increase deal flow with its target industries.
-                </p>
-                <p style="color:#7C7C7C;">
-                  A Business Development Analyst (BDA) will assist the Business Development (BD) team with researching key market and geopolitical conditions. Collected information will be used to grow VINCI's customer base while ensuring operations are adjusted accordingly.
-                </p>
-                <p style="color:#7C7C7C;">
-                  In addition, the BDA will assist VINCI's team with writing responses to RFPs, in addition to budgeting, marketing, and other Business Development Activities.
-                </p>
-
-                <h4>Breakdown of responsibilities</h4>
-                <ul class="resp">
-                  <li style="color:#7C7C7C;">> Analyze and create reports on current market conditions and players within VINCI's industry segments</li>
-                  <br>
-                  <li style="color:#7C7C7C;"> > Write Responses to RFPs for target industries</li>
-                  <br>
-                  <li style="color:#7C7C7C;">> Update and manage the company's internal CRM tools (or create/use new CRM tools) to grow its base of leads</li>
-                </ul>
-              </details>
-              <details class="col-span-3"  closed>
-                <summary>N/A - Part Time - Boston, MA</summary>
-              </details>
-              <details class="col-span-3"  closed>
-                <summary>N/A - Part Time - Boston, MA</summary>
-              </details>
-              <details class="col-span-3"  closed>
-                <summary>N/A - Part Time - Boston, MA</summary>
-              </details>
-              <details class="col-span-3"  closed>
-                <summary>N/A - Part Time - Boston, MA</summary>
-              </details>
-              <details class="col-span-3"  closed>
-                <summary>N/A - Part Time - Boston, MA</summary>
-              </details>
-            </section>
-        </section>
-      </section>
 
 
-      <section class="bg-secondary panel">
-         <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-           <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
-           <div class="flex flex-col justify-center mt-24">
-           <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
-           <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
-           <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
-           </div>
-           <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
-             <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
-               <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+        <section class="bg-secondary panel">
+           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+             <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
+             <div class="flex flex-col justify-center mt-24">
+             <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+             <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+             <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
              </div>
-             <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
-               <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-                 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
-                 <nav class="list-none mb-10 -mt-24">
-                   <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
-                   </li>
-                   <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
-                   </li>
-                   <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
-                   </li>
-                   <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
-                   </li>
-                   <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
-                   </li>
-                   <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
-                   </li>
-                 </nav>
+             <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+               <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+                 <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+               </div>
+               <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+                 <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                   <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                   <nav class="list-none mb-10 -mt-24">
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
+                     </li>
+                   </nav>
+                 </div>
                </div>
              </div>
-           </div>
-         </footer>
-      </section>
-    </section>
+           </footer>
+        </section>
+      </div>  <!-- end of desktop main container -->
+
+
+     <!-- beginning of main mobile view container -->
+     <section class="mobile-main">
+       <section class="panel first">
+         <h1>Hi mobile view!</h1>
+       </section>
+       <section class="panel second">
+         <h1>Panel 2</h1>
+       </section>
+
+     </section>   <!-- end of mobile container -->
+
+    </section> <!-- end of panel container -->
 
 <!-- ===============
     SCRIPTS
