--- a/views/case_USAF.hbs
+++ b/views/case_USAF.hbs
@@ -28,6 +28,8 @@
 
     <script src="/js/download.js"></script>
 		<link rel="stylesheet" href="../public/css/output-styles.css">
+		<link rel="stylesheet" href="../public/css/mobile.css">
+
 
 
 </head>
