--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../public/css/contact.css">
     <link rel="stylesheet" href="../public/css/output-styles.css">
+    <link rel="stylesheet" href="../public/css/mobile.css">
     <title>CONTACT</title>
   </head>
   <body class="font-serif">
@@ -14,6 +15,7 @@
       }
     </style>
     <section id = "container">
+      <div class="main-wrapper">
         <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -105,9 +107,27 @@
             </div>
           </footer>
        </section>
+      </div>
+
+      <!-- end of desktop main container -->
 
 
-   </section>
+     <!-- beginning of main mobile view container -->
+     <section class="mobile-main">
+       <section class="panel first">
+         <h1>Hi mobile view!</h1>
+       </section>
+       <section class="panel second">
+         <h1>Panel 2</h1>
+       </section>
+
+     </section>   <!-- end of mobile container -->
+
+    </section> <!-- end of panel container -->
+
+<!-- ===============
+    SCRIPTS
+=================== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
     <script src ="../public/js/contact.js"></script>
